# olymp.am

./: .gitignore  README.md
backend/: CMakeLists.txt  README.md  build.sh  run.sh
backend/include/: api_handler.h  server.h
backend/src/: api_handler.cpp  main.cpp  server.cpp
docs/: ARCHITECTURE.md
frontend/: README.md  index.html  run.sh
frontend/css/: styles.css
frontend/js/: api.js  app.js  data.js  ui.js
